# phys

./: .gitignore  Makefile  Makefile.in  aclocal.m4  autogen.sh  bin.cc  bin.h  config.h.in  configure.ac  coord.cc  coord.h  event.cc  event.h  gendep.sh  gfx.h  gfx_sdl.cc  gfx_sdl.h  input.h  input_sdl.cc  input_sdl.h  log.cc  log.h  main.cc  object.h  plane.cc  plane.h  point.cc  point.h  sim.cc  sim.h  system.cc  system.h
src/: .gitignore  Makefile.am  Makefile.in  box.cc  box.h  color.cc  conf.h  coord.cc  coord.h  drawable.cc  drawable.h  event.cc  event.h  gfx.h  gfx_sdl.cc  gfx_sdl.h  input.h  input_sdl.cc  input_sdl.h  main.cc  object.h  object_base.h  object_phys.cc  object_phys.h  object_types.h  plane.cc  plane.h  point.cc  point.h  prog.cc  prog.h  sim.cc  sphere.cc  sphere.h  system.cc  system.h  world.cc  world.h  world_gfx.cc  world_gfx.h  (+2 more)
